--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -2,8 +2,8 @@
   position: fixed;
   z-index: 10;
   min-width: 100%;
-  height: 70px;
-  background: #000;
+  height: 60px;
+  background: #282636;
   color: #fff;
   display: flex;
   justify-content: space-evenly;
@@ -39,6 +39,11 @@
   color: #fff;
   letter-spacing: 0.1rem;
 }
+.nav_btn > a {
+  text-decoration: none;
+  color: #fff;
+}
+.nav_btn:hover > a,
 .nav_btn:hover {
   color: #aa4b6b;
   transition: all 0.2s ease;
