--- a/src/components/MovieList/MovieList.module.css
+++ b/src/components/MovieList/MovieList.module.css
@@ -6,22 +6,79 @@
   gap: 2rem;
   align-items: center;
   flex-wrap: wrap;
-  padding: 3rem;
+  padding: 2rem 20rem;
+  position: relative;
 }
 .wrapper {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100%;
+  flex-direction: column;
+  width: 100%;
 }
+
 .dude {
   position: fixed;
   z-index: -10;
-  top: 19rem;
+  top: 12rem;
+  left: 50rem;
+  animation: slide-down 0.7s ease-out forwards;
+}
+.movie_card {
+  cursor: pointer;
+  position: relative;
+  transition: transform 0.2s;
+}
+.movie_card:hover {
+  transform: scale(1.2);
 }
 .poster {
-  width: 230px;
-  height: 300px;
+  width: 180px;
+  height: 250px;
   border-radius: 15px;
+  box-shadow: 0px 10px 5px #333;
+}
+.overlay {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 2rem;
+  border-radius: 15px;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  transition: all 0.3s ease;
+  background: rgba(0, 0, 0, 0.7);
+  opacity: 0;
+  bottom: 0;
+  text-align: center;
+  padding: 20px;
+  font-size: 20px;
+}
+.movie_card:hover .overlay {
+  opacity: 1;
+}
+.watchlist_btn {
   cursor: pointer;
+  border: none;
+  color: #fff;
+  font-size: 1.2rem;
+  width: 100%;
+  background: transparent;
+}
+.watchlist_btn:hover {
+  color: #aa4b6b;
+  transition: 0.2s ease;
+}
+
+@keyframes slide-down {
+  from {
+    opacity: 0;
+    transform: translateY(3rem);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
