--- a/src/components/UI/Wave/Wave.module.css
+++ b/src/components/UI/Wave/Wave.module.css
@@ -1,19 +1,20 @@
 .wave {
   position: relative;
-  top: 5rem;
+  top: 3.7rem;
   left: 0;
   width: 100%;
   overflow: hidden;
   line-height: 0;
+  /*position: fixed;*/
 }
 
 .wave svg {
   position: relative;
   display: block;
   width: calc(184% + 1.3px);
-  height: 123px;
+  height: 100px;
 }
 
 .wave .shape_fill {
-  fill: #000000;
+  fill: #282636;
 }
