--- a/src/components/MainPage/MainPage.module.css
+++ b/src/components/MainPage/MainPage.module.css
@@ -1,32 +1,44 @@
 .main {
-  width: 100%;
+  position: relative;
+  top: 2rem;
   height: 100%;
-  /*border: 2px solid red;*/
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   align-content: center;
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 1rem;
+  gap: 2.5rem;
+}
+.friends {
+  width: 550px;
+  height: 550px;
+  animation: slide-down 0.7s ease-out forwards;
 }
 .card {
   display: flex;
   justify-content: center;
-  align-items: center;
-  /*box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
-  border-radius: 12px;*/
-  width: 500px;
-  height: 300px;
-  margin: 5rem;
-  color: #fff;
+  align-items: flex-start;
+  width: 40%;
+  height: 500px;
+  color: #f4f4f4;
   flex-direction: column;
+
   animation: slide-down 0.5s ease-out forwards;
 }
-.card > h1 {
-  font-size: 7rem;
-  position: relative;
-  left: 3rem;
-  top: 3rem;
+
+.heading_txt {
+  display: flex;
+  justify-content: flex-start;
+  font-size: 6rem;
+  line-height: 5.5rem;
 }
-.card span {
-  color: #aa4b6b;
+.heading_sub_txt {
+  text-align: left;
+  font-weight: 100 !important;
+  padding: 2.5rem 0;
+  width: 500px;
+  letter-spacing: 1.5px;
+  line-height: 1.4rem;
 }
 
 @keyframes slide-down {
