--- a/src/components/Watchlist/Watchlist.module.css
+++ b/src/components/Watchlist/Watchlist.module.css
@@ -23,22 +23,17 @@
   width: 80%;
   margin: 1rem 5rem;
   height: 100%;
-
   background: transparent;
   border-radius: 15px;
   animation: slide-down 0.5s ease-out forwards;
 }
-/*.watchlist_empty {
+.wrapper {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 100%;
-  height: 100%;
-}*/
-.watchlist_empty > h1 {
-  font-size: 2rem;
-  color: #fff;
 }
+
 .movie {
   display: flex;
   justify-content: center;
@@ -82,6 +77,15 @@
 .watchlist_btn:hover {
   transition: 0.2s ease;
   background: #1c464c;
+}
+.watchlist_empty {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  height: 50vh;
+  font-weight: 100;
+  font-size: 2rem;
 }
 
 @keyframes slide-down {
