--- a/src/components/MovieList/MovieList.module.css
+++ b/src/components/MovieList/MovieList.module.css
@@ -16,6 +16,7 @@
   align-items: center;
   width: 100%;
   flex-direction: column;
+  animation: slide-up 0.3s forwards;
 }
 .movie_card {
   cursor: pointer;
@@ -75,14 +76,39 @@
   font-weight: 100;
 }
 .watchlist_btn:hover {
-  color: #aa4b6b;
+  color: #438795;
   transition: 0.2s ease;
+}
+.watchlist_btn:disabled {
+  color: transparent;
+  cursor: none;
+}
+.movies_empty {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50vh;
+  animation: slide-down 0.3s forwards;
+}
+.movies_empty > p {
+  color: #fff;
+  font-size: 3rem;
 }
 
 @keyframes slide-down {
   from {
     opacity: 0;
     transform: translateY(3rem);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+@keyframes slide-up {
+  from {
+    opacity: 0;
+    transform: translateY(-3rem);
   }
   to {
     opacity: 1;
