--- a/src/components/Watchlist/Watchlist.module.css
+++ b/src/components/Watchlist/Watchlist.module.css
@@ -38,11 +38,13 @@
   display: flex;
   justify-content: center;
   align-items: flex-start;
+  width: 100%;
 }
 .movie > h2 {
   color: #fff;
   padding: 1rem;
   font-size: 1rem;
+  width: 50%;
 }
 
 .poster {
