--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -20,6 +20,12 @@
 .logo_span {
   color: #3b8d99;
 }
+.logo_btn {
+  background: transparent;
+  border: none;
+  color: #fff;
+  cursor: pointer;
+}
 .nav_list {
   display: flex;
   justify-content: center;
