--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,7 +1,7 @@
 .navbar {
   position: fixed;
   z-index: 10;
-  min-width: 100%;
+  width: 100%;
   height: 60px;
   background: #282636;
   color: #fff;
@@ -9,6 +9,12 @@
   justify-content: space-evenly;
   align-items: center;
   gap: 10rem;
+}
+.nav_control {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 15rem;
 }
 .logo {
   display: flex;
@@ -30,13 +36,13 @@
   color: #fff;
   cursor: pointer;
 }
-.nav_list {
+.watchlist {
   display: flex;
   justify-content: center;
   align-content: center;
   gap: 2rem;
 }
-.nav_btn {
+.watchlist_btn {
   font-size: 1.1rem;
   border: none;
   padding: 0.7rem 1.2rem;
@@ -47,7 +53,7 @@
   justify-content: center;
   align-items: center;
 }
-.nav_btn > a {
+.watchlist_btn > a {
   text-decoration: none;
   color: #fff;
 }
@@ -88,4 +94,46 @@ input:focus,
 textarea:focus,
 select:focus {
   outline: none;
+}
+@media (max-width: 767px) {
+  .navbar {
+    justify-content: flex-end;
+    align-items: center;
+    gap: 0;
+    height: 160px;
+    flex-direction: column;
+    position: relative;
+  }
+  .nav_control {
+    height: 50px;
+    gap: 0;
+    width: 100%;
+    height: 40%;
+    /*background: #3d3956;*/
+  }
+  .logo {
+    font-size: 2rem;
+    padding: 1rem;
+    align-items: center;
+  }
+  .logo_svg {
+    width: 50px;
+    height: 50px;
+  }
+  .search_box {
+    font-size: 1rem;
+  }
+
+  .watchlist {
+    width: 120px;
+  }
+  .watchlist_btn {
+    padding: 0.5rem;
+    width: 150px;
+    flex-direction: row-reverse;
+  }
+  .watchlist_badge {
+    width: 40px;
+    height: 40px;
+  }
 }
