--- a/src/components/MainPage/MainPage.module.css
+++ b/src/components/MainPage/MainPage.module.css
@@ -2,6 +2,7 @@
   position: relative;
   top: 2rem;
   height: 100%;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-content: center;
@@ -19,10 +20,8 @@
   justify-content: center;
   align-items: flex-start;
   width: 40%;
-  height: 500px;
   color: #f4f4f4;
   flex-direction: column;
-
   animation: slide-down 0.5s ease-out forwards;
 }
 
@@ -49,5 +48,40 @@
   to {
     opacity: 1;
     transform: translateY(0);
+  }
+}
+
+@media (max-width: 767px) {
+  .main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+  }
+  .heading_txt {
+    font-size: 4rem;
+    line-height: 3.4rem;
+    padding: 3rem;
+  }
+  .friends {
+    position: absolute;
+    padding: 2.5rem;
+    margin: 2rem;
+    width: 400px;
+  }
+  .card {
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 80vh;
+    gap: 10rem;
+  }
+  .heading_sub_txt {
+    position: relative;
+    padding: 4rem;
+    width: 100%;
+    letter-spacing: 1.2px;
   }
 }
