--- a/src/components/MovieList/MovieOverview.module.css
+++ b/src/components/MovieList/MovieOverview.module.css
@@ -66,6 +66,9 @@
   background: transparent;
   font-weight: 100;
 }
+.watchlist_btn_mobile {
+  display: none;
+}
 .watchlist_btn:hover {
   color: #438795;
   transition: 0.2s ease;
@@ -77,27 +80,67 @@
 /* */
 
 .movie_overview {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   z-index: 1000;
-  background: #282636;
-  color: #fff;
+  background: #f4f4f4;
+  color: #5b5679;
   width: 300px;
   border-radius: 15px;
-  height: 400px;
+  height: 100%;
   animation: slide-down 0.3s forwards;
 }
 .title {
-  font-size: 1.5rem;
-  padding: 1rem;
+  font-size: 1.4rem;
+  padding: 0.4rem;
+  border-bottom: 4px solid #5b5679;
+  width: 90%;
 }
-.sub_heading {
-  text-align: left;
-  padding: 0.5rem 1rem;
-}
+
 .runtime {
-  padding: 0 1rem;
+  background: rgb(225, 222, 222);
+  padding: 0.6rem;
+  border-radius: 15px;
 }
-.genre {
+.director {
+  width: 100%;
+  display: flex;
+  margin-top: 0.4rem;
+  gap: 5rem;
+  justify-content: center;
+  align-items: center;
+}
+
+.plot {
   padding: 1rem;
+  font-size: 0.9rem;
+}
+.close_overview_btn {
+  background: transparent;
+  color: #fff;
+  font-size: 2rem;
+  border: none;
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+  background: #5b5679;
+  border-radius: 50%;
+  margin: 0.5rem;
+}
+.close_overview_btn:hover {
+  color: rgb(168, 167, 167);
+  transition: 0.2s ease;
+}
+.control_mobile {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  gap: 5rem;
+  color: #333;
 }
 
 @keyframes slide-down {
@@ -118,5 +161,13 @@
   to {
     opacity: 1;
     transform: translateY(0);
+  }
+}
+@media (max-width: 767px) {
+  .watchlist_btn_mobile {
+    display: block;
+  }
+  .watchlist_btn {
+    color: #5b5679;
   }
 }
