--- a/src/components/Watchlist/Watchlist.module.css
+++ b/src/components/Watchlist/Watchlist.module.css
@@ -1,3 +1,9 @@
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 .list {
   /*padding: 5rem;*/
   width: 100%;
@@ -27,12 +33,6 @@
   border-radius: 15px;
   animation: slide-down 0.5s ease-out forwards;
 }
-.wrapper {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
 
 .watchlist_empty {
   display: flex;
@@ -52,5 +52,21 @@
   to {
     opacity: 1;
     transform: translateY(0);
+  }
+}
+
+@media (max-width: 767px) {
+  .wrapper {
+    width: 100%;
+    height: 100%;
+  }
+  .watchlist_empty {
+    width: 100%;
+    position: relative;
+    bottom: 5rem;
+  }
+  .showcase {
+    width: 100%;
+    height: 100%;
   }
 }
