--- a/src/components/Watchlist/WatchlistMovie.module.css
+++ b/src/components/Watchlist/WatchlistMovie.module.css
@@ -5,7 +5,7 @@
   width: 100%;
 }
 .movie > h2 {
-  color: #fff;
+  color: #777;
   padding: 1rem;
   font-size: 1rem;
   width: 50%;
@@ -13,7 +13,7 @@
 .movie_card {
   border-radius: 15px;
   font-size: 0.1rem;
-  background-color: #282636;
+  background: #f4f4f4;
   width: 330px;
   height: 260px;
   padding: 1rem;
@@ -51,4 +51,10 @@
   bottom: 4rem;
   font-size: 2rem;
   width: 60px;
+}
+
+@media (max-width: 767px) {
+  .watchlist_btn {
+    font-size: 1rem;
+  }
 }
