--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,8 @@ html {
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   color: #111;
-
+  height: 100%;
+  height: 100%;
   background: -webkit-linear-gradient(
     to right,
     #3c4b4d,
@@ -26,4 +27,11 @@ html {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+@media (max-width: 767px) {
+  html,
+  body {
+    width: 100%;
+    height: 100%;
+  }
 }
