watchlist btn resolved

--- a/src/components/MainPage/MainPage.module.css
+++ b/src/components/MainPage/MainPage.module.css
@@ -64,6 +64,7 @@
     font-size: 4rem;
     line-height: 3.4rem;
     padding: 3rem;
+    margin-bottom: 2rem;
   }
   .friends {
     position: absolute;
