--- a/src/components/MovieList/MovieOverview.module.css
+++ b/src/components/MovieList/MovieOverview.module.css
@@ -14,6 +14,10 @@
 .movie_card:hover {
   transform: scale(1.2);
 }
+.loading {
+  transform: rotate(360deg);
+  animation: rotating 0.3s ease;
+}
 .poster {
   width: 180px;
   height: 250px;
@@ -103,12 +107,14 @@
   background: rgb(225, 222, 222);
   padding: 0.6rem;
   border-radius: 15px;
+  width: 90px;
 }
 .director {
+  height: 100%;
   width: 100%;
   display: flex;
   margin-top: 0.4rem;
-  gap: 5rem;
+  gap: 2rem;
   justify-content: center;
   align-items: center;
 }
@@ -163,11 +169,17 @@
     transform: translateY(0);
   }
 }
+@keyframes rotating {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.rotating {
+  animation: rotating 2s linear infinite;
+}
 @media (max-width: 767px) {
-  .watchlist_btn_mobile {
-    display: block;
-  }
-  .watchlist_btn {
-    color: #5b5679;
-  }
 }
