--- a/src/components/MainPage/MainPage.module.css
+++ b/src/components/MainPage/MainPage.module.css
@@ -1,7 +1,7 @@
 .main {
   position: relative;
-  top: 2rem;
-  height: 100%;
+  top: 4rem;
+  height: 81.3vh;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -9,13 +9,16 @@
   font-family: Arial, Helvetica, sans-serif;
   margin: 1rem;
   gap: 2.5rem;
+  z-index: 100;
 }
 .friends {
   width: 550px;
   height: 500px;
   animation: slide-down 0.5s ease-out forwards;
+  background: url("../assets/bg_blob.svg") center center no-repeat;
 }
 .card {
+  height: 500px;
   display: flex;
   justify-content: center;
   align-items: flex-start;
@@ -28,7 +31,7 @@
 .heading_txt {
   display: flex;
   justify-content: flex-start;
-  font-size: 6rem;
+  font-size: 7rem;
   line-height: 5.5rem;
 }
 .heading_sub_txt {
