--- a/src/components/Watchlist/Watchlist.module.css
+++ b/src/components/Watchlist/Watchlist.module.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  min-height: 85.8vh;
 }
 .list {
   /*padding: 5rem;*/
@@ -41,6 +42,8 @@
   color: #fff;
   height: 50vh;
   font-weight: 100;
+  position: relative;
+  bottom: 4rem;
   font-size: 2rem;
 }
 
