--- a/src/components/MainPage/MainPage.module.css
+++ b/src/components/MainPage/MainPage.module.css
@@ -37,7 +37,9 @@
 .heading_sub_txt {
   text-align: left;
   font-weight: 100 !important;
-  padding: 2.5rem 0;
+  padding: 2rem 0;
+  position: relative;
+  bottom: 4rem;
   width: 500px;
   letter-spacing: 1.5px;
   line-height: 1.4rem;
@@ -61,7 +63,10 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 100%;
+    min-height: 100vh;
+    margin: auto;
+    position: relative;
+    /*bottom: 5rem;*/
   }
   .heading_txt {
     font-size: 4rem;
@@ -74,6 +79,7 @@
     padding: 2.5rem;
     margin: 2rem;
     width: 400px;
+    background: none;
   }
   .card {
     justify-content: center;
