--- a/src/components/MainPage/MainPage.module.css
+++ b/src/components/MainPage/MainPage.module.css
@@ -17,6 +17,9 @@
   animation: slide-down 0.5s ease-out forwards;
   background: url("../assets/bg_blob.svg") center center no-repeat;
 }
+.friends_mobile {
+  display: none;
+}
 .card {
   height: 500px;
   display: flex;
@@ -37,9 +40,7 @@
 .heading_sub_txt {
   text-align: left;
   font-weight: 100 !important;
-  padding: 2rem 0;
-  position: relative;
-  bottom: 4rem;
+  padding: 2.5rem 0;
   width: 500px;
   letter-spacing: 1.5px;
   line-height: 1.4rem;
@@ -58,38 +59,42 @@
 
 @media (max-width: 767px) {
   .main {
+    top: 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 100%;
-    min-height: 100vh;
+    height: 90vh;
     margin: auto;
-    position: relative;
-    /*bottom: 5rem;*/
   }
   .heading_txt {
-    font-size: 4rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-size: 3.7rem;
+    width: 400px;
     line-height: 3.4rem;
     padding: 3rem;
-    margin-bottom: 2rem;
   }
   .friends {
-    position: absolute;
-    padding: 2.5rem;
-    margin: 2rem;
-    width: 400px;
-    background: none;
+    display: none;
+  }
+  .friends_mobile {
+    display: block;
+    width: 350px;
+    height: 350px;
   }
   .card {
     justify-content: center;
     align-items: center;
     width: 100%;
     height: 80vh;
-    gap: 10rem;
   }
   .heading_sub_txt {
     position: relative;
+    text-align: left;
     padding: 4rem;
     width: 100%;
     letter-spacing: 1.2px;
