--- a/src/components/MovieList/MovieOverview.module.css
+++ b/src/components/MovieList/MovieOverview.module.css
@@ -5,7 +5,7 @@
   width: 100%;
   flex-direction: column;
   animation: slide-up 0.3s forwards;
-  z-index: 1000;
+  z-index: -10;
 }
 .movie_card {
   cursor: pointer;
@@ -104,13 +104,7 @@
   width: 90%;
 }
 
-.runtime {
-  background: rgb(225, 222, 222);
-  padding: 0.6rem;
-  border-radius: 15px;
-  width: 90px;
-}
-.director {
+.movie_info {
   height: 100%;
   width: 100%;
   display: flex;
@@ -118,6 +112,15 @@
   gap: 2rem;
   justify-content: center;
   align-items: center;
+}
+.runtime {
+  background: rgb(225, 222, 222);
+  padding: 0.6rem;
+  border-radius: 15px;
+  width: 90px;
+}
+.director {
+  width: 90px;
 }
 
 .plot {
@@ -183,4 +186,7 @@
   animation: rotating 2s linear infinite;
 }
 @media (max-width: 767px) {
+  .movie_info {
+    justify-content: space-evenly;
+  }
 }
