--- a/src/components/MovieList/MovieList.module.css
+++ b/src/components/MovieList/MovieList.module.css
@@ -20,6 +20,7 @@
   flex-direction: column;
   animation: slide-up 0.3s forwards;
   z-index: 10;
+  height: 100%;
   position: relative;
 }
 
@@ -27,7 +28,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 50vh;
+  height: 85.8vh;
   animation: slide-down 0.3s forwards;
 }
 .movies_empty > p {
@@ -58,5 +59,8 @@
 @media (max-width: 767px) {
   .showcase {
     width: 100%;
+  }
+  .wrapper {
+    min-height: 100vh;
   }
 }
