--- a/src/App.module.css
+++ b/src/App.module.css
@@ -60,6 +60,23 @@
     spin 26s linear infinite reverse;
   transform-origin: 20% 20%;
 }
+footer {
+  padding: 1rem;
+  z-index: 100;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: rgba(255, 255, 255, 0.449);
+}
+footer a {
+  color: rgba(255, 255, 255, 0.449);
+  text-decoration: none;
+}
+footer a:hover {
+  color: #fa6952;
+  transition: 0.2s ease;
+}
 
 @-webkit-keyframes Gradient {
   0% {
