--- a/src/components/MainPage/MainPage.module.css
+++ b/src/components/MainPage/MainPage.module.css
@@ -1,13 +1,13 @@
 .main {
   position: relative;
   top: 4rem;
-  height: 81.3vh;
+  height: 90vh;
   width: 100%;
   display: flex;
   justify-content: center;
   align-content: center;
   font-family: Arial, Helvetica, sans-serif;
-  margin: 1rem;
+  margin: auto;
   gap: 2.5rem;
   z-index: 100;
 }
