--- a/src/components/Watchlist/Watchlist.module.css
+++ b/src/components/Watchlist/Watchlist.module.css
@@ -3,7 +3,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  min-height: 85.8vh;
+  min-height: 90vh;
+  margin: auto;
   z-index: 10;
 }
 .list {
