--- a/src/components/Watchlist/WatchlistMovie.module.css
+++ b/src/components/Watchlist/WatchlistMovie.module.css
@@ -21,6 +21,7 @@
   justify-content: space-between;
   align-items: center;
   flex-direction: column;
+  box-shadow: 0px 5px 10px #333;
 }
 
 .poster {
