--- a/src/components/MovieList/MovieOverview.module.css
+++ b/src/components/MovieList/MovieOverview.module.css
@@ -5,6 +5,7 @@
   width: 100%;
   flex-direction: column;
   animation: slide-up 0.3s forwards;
+  z-index: -10;
 }
 .movie_card {
   cursor: pointer;
@@ -106,7 +107,7 @@
   width: 100%;
   display: flex;
   margin-top: 0.4rem;
-  gap: 5rem;
+  gap: 4rem;
   justify-content: center;
   align-items: center;
 }
@@ -117,7 +118,7 @@
   width: 90px;
 }
 .director {
-  width: 25%;
+  width: 90px;
 }
 
 .plot {
