--- a/src/components/Watchlist/Watchlist.module.css
+++ b/src/components/Watchlist/Watchlist.module.css
@@ -5,7 +5,8 @@
   align-items: center;
   min-height: 90vh;
   margin: auto;
-  z-index: 10;
+  z-index: 100;
+  position: relative;
 }
 .list {
   /*padding: 5rem;*/
