--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -4,7 +4,6 @@
   width: 100%;
   height: 60px;
   background: #282636;
-
   color: #fff;
   display: flex;
   justify-content: space-evenly;
@@ -157,5 +156,9 @@ select:focus {
   }
   .logo_span {
     color: #fff;
+  }
+  .search_svg {
+    position: relative;
+    bottom: 0.2rem;
   }
 }
